--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -160,8 +160,16 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .bg-colored{
-    h1, h2, h3, h4, h5, h6{
+    h1, h2, h3, h4, h5, h6, p, span, small, a, li{
         color: $clr-tertiary;
+        // @include link-hover-effect($clr-tertiary, $clr-primary);
+
+        svg{
+            path{
+                fill:$clr-white;
+                transition:fill 0.3s ease;
+            }
+        }
     }
 }
 
