--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -10,8 +10,11 @@
     &__link-title{
         color:$clr-white;
         line-height: 1.11;
-        font-size: 24px;
+        font-size: 22px;
         display: inline-flex;
+        @media only screen and (min-width:352px){
+            font-size: 24px;
+        }
         @include breakpoint-sm{
             font-size: 26px;
         }
@@ -50,7 +53,6 @@
             background-position: 0 0;
         }
     }
-
     &__bottom-right-wrapper{
         @include flex-center-vertical;
         gap:16px;
@@ -60,27 +62,32 @@
             margin-top: 0;
         }
     }
+}
 
-    &__socials-list{
-        display: flex;
-        justify-content: space-between;
+.socials-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+
+    &--contact {
+        justify-content: flex-start;
+        gap:1rem;
+
+        @include breakpoint-sm{
+            gap:2rem;
+        }
+        @include breakpoint-md{
+            gap:3rem;
+        }
     }
 }
 
-.socials-list{
-    display: flex;
-    align-items: center;
-    gap:10px;
-}
-
 .socials-item{
-    position: relative;
-    overflow: hidden;
+    @include relative-hidden;
 }
 
 .socials-link{
-    position: relative;
-    overflow: hidden;
+    @include relative-hidden;
     padding:em(10);
     @include border-radius(50%);
     @include flex-center; 
@@ -114,32 +121,43 @@
 }
 
 .copyright-text-wrapper{
-    position: relative;
-    overflow: hidden;
+    @include relative-hidden;
+    display: inline-flex;
+    flex-direction: column;
+    @include breakpoint-sm{
+        align-items: flex-end;
+    }
+    @include breakpoint-xl{
+        align-items: flex-start;
+    }
     small{
         display: inline-flex;
-        color:$clr-white;
         margin-top: 0;
         font-size: 20px;
         line-height: 1.8;
+        text-align: right;
     }
 }
 
 .cta-link{
     display: inline-flex;
     align-items: center;
-    gap: 24px;
+    gap: 12px;
+    @include link-hover-effect($clr-tertiary, $clr-primary);
+    @media (min-width: 356px){
+        gap: 16px;
+    }
     @include breakpoint-sm{
+        gap: 24px
+    }
+    @include breakpoint-lg{
         gap: 32px;
     }
 
     span{
-        // color:$clr-white;
         font-size: rem(24);
         line-height: 1.11;
         font-family: $ff-primary;
-        @include link-hover-effect($clr-tertiary, $clr-primary);
-
         @include breakpoint-sm{
             font-size: rem(26);
         }
@@ -152,19 +170,27 @@
         @include breakpoint-xxl{
             font-size: rem(36);
         }
+    }
+    svg{
+        path{
+            fill:$clr-white;
+            transition:fill 0.3s ease;
+        }
+    }
 
+
+    &--contact{
+        @include link-hover-effect($clr-secondary, $clr-primary);
         svg{
             path{
-                fill:$clr-white;
+                fill:$clr-secondary;
                 transition:fill 0.3s ease;
             }
         }
     }
 
     &:hover{
-        span{
-            background-position: 0 0;
-        }
+        background-position: 0 0;
         svg{
             path{
                 fill:$clr-primary;
@@ -177,18 +203,18 @@
     small{
         font-size: 16px;
         line-height: 1.8;
-    
+        text-transform: capitalize;
         @include breakpoint-md{
             font-size: 18px;
         }
-
         @include breakpoint-xxl{
             font-size: 20px;
         }
     }
 }
 
-.sitemap-container {
+.sitemap-list{
+    @include relative-hidden;
     display: flex;
     justify-content: space-between;
 }
@@ -207,21 +233,25 @@
 }
 
 .certfied-list{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+    @include relative-hidden;
+    @include flex-center-vertical;
     flex-wrap: wrap;
+    gap: 16px;
     @include breakpoint-sm{
+        gap:22px;
+    }
+    @include breakpoint-md{
+        gap:28px;
+    }
+    @include breakpoint-lg{
         gap:32px;
     }
     &__item {
-        display: flex;
-        align-items: center;
-        gap: 20px;
+        @include flex-center-vertical;
+        gap: 10px;
         @include breakpoint-sm{
-            gap: 28px;
+            gap: 14px;
         }
-
         span{
             font-size: 16px;
             line-height: 1.56;
@@ -232,6 +262,8 @@
         }
     }
 }
+
+
 
 .grid-container{
     display: grid;
