--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -20,7 +20,7 @@
     background: $clr-secondary;
     padding-block:12px;
     display: none;
-    @include breakpoint-lg{
+    @include breakpoint-xl{
         display: block;
     }
 
@@ -37,8 +37,11 @@
             gap: 16px;
             span{
                 color:$clr-tertiary;
-                font-size: 16px;
+                font-size: 14px;
                 line-height: 1.56;
+                @media only screen and (min-width:1366px){
+                    font-size: rem(16);
+                }
                 @include breakpoint-xxl{
                     font-size: 18px;
                 }
@@ -73,7 +76,7 @@
             gap:32px;
         }
          display: none;
-        @include breakpoint-lg{
+        @include breakpoint-xl{
             display: flex;
         }
     }
@@ -83,7 +86,7 @@
         display: flex;
         padding:em(16);
         margin-top: 16px;
-        @include breakpoint-lg{
+        @include breakpoint-xl{
             display: none;
         }
     }
@@ -102,7 +105,7 @@
     cursor: pointer;
     display: flex;
     transform:rotate(180deg);
-    @include breakpoint-lg{
+    @include breakpoint-xl{
         display: none;
     }
 }
