about-contact-services-page-done

--- a/assets/scss/abstract/_fonts.scss
+++ b/assets/scss/abstract/_fonts.scss
@@ -3,22 +3,22 @@
     font-family:"InstrumentSerif-Regular";
     src:url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.eot");
     src:url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.eot?#iefix") format("embedded-opentype"), 
-    url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.woff2") format('woff2'),
-    url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.woff") format('woff'),
-    url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.ttf") format('truetype'),
-    url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.svg#InstrumentSerif-Regular") format('svg');
+        url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.woff2") format('woff2'),
+        url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.woff") format('woff'),
+        url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.ttf") format('truetype'),
+        url("../assets/fonts/InstrumentSerif/InstrumentSerif-Regular.svg#InstrumentSerif-Regular") format('svg');
     font-weight:400;
 }
 
 // --------- Instrument-Serif_Italic -------------
 @font-face{
     font-family:"InstrumentSerif-Italic";
-    src:url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.eot");
-    src:url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.eot?#iefix") format("embedded-opentype"), 
-    url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.woff2") format('woff2'),
-    url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.woff") format('woff'),
-    url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.ttf") format('truetype'),
-    url("../../../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.svg#InstrumentSerif-Italic") format('svg');
+    src:url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.eot");
+    src:url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.eot?#iefix") format("embedded-opentype"), 
+        url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.woff2") format('woff2'),
+        url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.woff") format('woff'),
+        url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.ttf") format('truetype'),
+        url("../assets/fonts/InstrumentSerif-Italic/InstrumentSerif-Italic.svg#InstrumentSerif-Italic") format('svg');
     font-weight:400;
     font-style: italic;
 }
@@ -28,10 +28,10 @@
     font-family:"DmSans-Regular";
     src:url("../assets/fonts/DMSans/DMSans-regular.eot");
     src:url("../assets/fonts/DMSans/DMSans-regular.eot?#iefix") format("embedded-opentype"), 
-    url("../assets/fonts/DMSans/DMSans-regular.woff2") format('woff2'),
-    url("../assets/fonts/DMSans/DMSans-regular.woff") format('woff'),
-    url("../assets/fonts/DMSans/DMSans-regular.ttf") format('truetype'),
-    url("../assets/fonts/DMSans/DMSans-regular.svg#DmSans-Regular") format('svg');
+        url("../assets/fonts/DMSans/DMSans-regular.woff2") format('woff2'),
+        url("../assets/fonts/DMSans/DMSans-regular.woff") format('woff'),
+        url("../assets/fonts/DMSans/DMSans-regular.ttf") format('truetype'),
+        url("../assets/fonts/DMSans/DMSans-regular.svg#DmSans-Regular") format('svg');
     font-weight:400;
 }
 
