--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -5,6 +5,7 @@
 @forward "./navbar";
 @forward "./faq";
 @forward "./commonStyle";
+@forward "./checkbox";
 // @forward "./swiper";
 // @forward "./marquee";
 // @forward "./video-popup";
