--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -289,7 +289,7 @@
         grid-template-columns: repeat(2, 1fr);
         gap: rem(32);
     }
-    @include breakpoint-md{
+    @include breakpoint-lg{
         grid-template-columns: repeat(3, 1fr);
         gap: rem(16);
     }
