--- a/assets/scss/utilities/_helper.scss
+++ b/assets/scss/utilities/_helper.scss
@@ -171,3 +171,17 @@
 .ff-primary{
     font-family: $ff-primary;
 }
+
+
+// figure{
+//     position: relative;
+//     &::before{
+//         content: "";
+//         position: absolute;
+//         left: 0;
+//         top: 0;
+//         width: 100%;
+//         height: 100%;
+//         background: $clr-primary;
+//     }
+// }
