--- a/assets/scss/components/_faq.scss
+++ b/assets/scss/components/_faq.scss
@@ -17,7 +17,11 @@
         }
         @include breakpoint-md{
             padding-block: em(36);
+            padding-right: 1rem;
             gap:16px;
+        }
+        @include breakpoint-md{
+            padding-right: 2rem;
         }
     }
     &__title{
@@ -26,14 +30,23 @@
         display: flex;
         gap:rem(16);
         @include transition(all, 0.25s, ease);
+        color:$clr-secondary;
         // @include link-hover-effect($clr-primary, $clr-secondary );
         &::after{
             content: "+";
-            color:$clr-secondary;
+            color:$clr-primary;
             flex-shrink: 0;
             position: absolute;
             right: 0;
             transition:all 0.25s ease;
+            font-size: 40px;
+            font-weight: 600;
+            @include breakpoint-sm{
+                font-size: 44px;
+            }
+            @include breakpoint-md{
+                font-size: 48px;
+            }
         }
     }
     &__icon-wrapper{
