--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -25,8 +25,6 @@
         background: $clr-quartery;
         outline:none;
         border:none;
-        // border:1px solid $clr-grey-1;
-        // padding-inline: em(16);
         color:$clr-primary;
         font-size: rem(18);
         line-height: 3.4;
@@ -34,7 +32,6 @@
         caret-color: $clr-secondary;
       
         @include breakpoint-md{
-            // padding-inline:em(20);
             font-size: rem(20);
         }
 
@@ -197,3 +194,68 @@
         bottom: 0;
     }
 }
+
+
+.service-form-group{
+    position: relative;
+
+    .services-list{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 400px;
+        margin-top: 4.5rem;
+        border:1px solid green;
+        background: #000;
+    }
+}
+
+
+.custom-select{
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    &::after{
+        content: url("../assets/icons/chevron-dwon.svg");
+        position: absolute;
+        right: 32px;
+        pointer-events: none;
+        top: 50%;
+        transform: translateY(-50%) rotate(0deg);
+        transition:transform 0.3s ease;
+        transform-origin: center;
+    }
+
+    select{
+        position: relative;
+        appearance: none;
+        width: 100%;
+        border:none;
+        color:$clr-primary;
+        font-size: rem(18);
+        line-height: 3.4;
+        font-family: $ff-secondary;
+        padding-left: 2.5em;
+        background: transparent;
+        @include breakpoint-md{
+            font-size: rem(20);
+        }
+    }
+}
+
+.custom-select {
+    &:focus-within{
+        &::after{
+            transform: translateY(-50%) rotate(180deg);
+        }
+    }
+}
+
+
+// .custom-select select:focus + .custom-select::after,
+// .custom-select select:active + .custom-select::after {
+//     transform: translateY(-50%) rotate(180deg);
+// }
