--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -25,9 +25,13 @@
     }
 
     &__container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        @include flex-center-vertical;
+        @include breakpoint-xl{
+            gap:3rem;
+        }
+        @include breakpoint-xxl{
+            gap:4rem;
+        }
     }
 
     &__left{
@@ -52,7 +56,7 @@
 
 .header-desktop{
     transition:all 0.25s ease;
-    padding-block:em(16);
+    padding-block:em(12);
 }
 
 
